syntax = "proto3";

package gateways;

service Eventing {
    // StartEventSource starts an event source and returns stream of events.
    rpc StartEventSource(EventSource) returns (stream Event);
    // ValidateEventSource validates an event source.
    rpc ValidateEventSource(EventSource) returns (ValidEventSource);
}

message EventSource {
    // ID of the event source. internally generated.
    string id = 1;
    // The event source name.
    string name = 2;
    // The event source configuration value.
    string data = 3;
}

message Event {
    // The event source name.
    string name = 1;
    // The event payload.
    bytes payload = 2;
}

message ValidEventSource {
    bool isValid = 1;
}
